# ai-scientist-target-review

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: final-report.md  sample_trace.jsonl
src/ai_scientist/: __init__.py  cli.py  graph.py  llm.py  logging_utils.py  schemas.py  tools.py  verdict.py
src/ai_scientist/agents/: reviewer.py  scientist.py  writer.py
tests/: conftest.py  test_reviewer.py  test_tools.py  test_verdict.py
tests/fixtures/: drafts.py
